tests/codegen/errors/reader/signatures-params/atom.reader.error.reader.lambda.empty.body/reader-lambda-empty-body.mon
;; TEST-ID: tests.codegen.reader-error.reader-lambda-empty-body
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/signatures-params
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: lambda body cannot be empty
;; TEST-ATOM: atom.reader.error.reader.lambda.empty.body
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.lambda.empty.body
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: lambda body cannot be empty
;; TEST-READER-PATH: reader.c:2789 parser.lambda
;; TEST-CODEGEN-PATH: diagnostic.parser.lambda
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:2789 lambda body cannot be empty
;; TEST-USES-ATOM: atom.reader.error.reader.lambda.empty.body
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.lambda
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/signatures-params/atom.reader.error.reader.lambda.empty.body
;; TEST-MENU-PATH: codegen/errors/reader/signatures-params/atom.reader.error.reader.lambda.empty.body
;; TEST-ATOM-LEAF: atom.reader.error.reader.lambda.empty.body
;; TEST-CLI-TARGET: codegen errors reader signatures-params

(module Main)
(lambda ([x : Int]))
